--- a/lang/de.json
+++ b/lang/de.json
@@ -20,6 +20,8 @@
         "SettingEndSessionUrlHelp": "Nach dem Logout wird der Benutzer zu dieser URL weitergeleitet, damit die Session beim Provider beendet wird. Bei Unklarheit sollte dieses Feld freigelassen werden.",
         "SettingUserinfoId": "Userinfo ID",
         "SettingUserinfoIdHelp": "Name des Feldes, in dem die Benutzer-ID enthalten ist. Normalerweise, für OpenID Connect Dienste wie Auth0, ist das 'sub'. Github gibt die eindeutige Benutzer-ID in dem Feld 'id' an.",
+        "SettingInternalUrl": "Interne URL",
+        "SettingInternalUrlHelp": "Die URL, ist für den Fall das der OIDC Provider hinter dem selben Reverse Proxy wie Matomo läuft. Wenn nicht gesetzt, werden sowohl im Client als auch im Server die selben URLs verwendet.",
         "SettingClientId": "Client ID",
         "SettingClientIdHelp": "",
         "SettingClientSecret": "Client Secret",
