--- a/lang/en.json
+++ b/lang/en.json
@@ -22,6 +22,8 @@
         "SettingEndSessionUrlHelp": "After logging out, the user is redirected to this URL to end the session at the provider. If you are unsure, just leave this field empty.",
         "SettingUserinfoId": "Userinfo ID",
         "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response. Usually for OpenID Connect services like Auth0 this is 'sub'. Github provides the user id in 'id'.",
+        "SettingInternalUrl": "Internal URL",
+        "SettingInternalUrlHelp": "The URL is used in case the OIDC Provider is behind the same reverse proxy as Matomo. If not set, the same URLs will be used in both the client and the server.",
         "SettingClientId": "Client ID",
         "SettingClientIdHelp": "",
         "SettingClientSecret": "Client Secret",
