--- a/lang/fr.json
+++ b/lang/fr.json
@@ -20,6 +20,8 @@
         "SettingEndSessionUrlHelp": "",
         "SettingUserinfoId": "ID Userinfo",
         "SettingUserinfoIdHelp": "Nom du champ de l'identifiant unique utilisateur dans la réponse 'userinfo'. Habituellement, pour les services de connexion OpenID Connect comme Auth0, il s'agit de 'sub'. Github fourni l'identifiant utilisateur avec 'id'.",
+        "SettingInternalUrl": "URL interne",
+        "SettingInternalUrlHelp": "L'URL est utilisée dans le cas où le fournisseur OIDC est derrière le même proxy inverse que Matomo. Si non défini, les mêmes URL seront utilisées à la fois dans le client et dans le serveur.",
         "SettingClientId": "Client ID",
         "SettingClientIdHelp": "",
         "SettingClientSecret": "Client Secret",
